renamed files for specific ETFs and added new backtesting

--- a/patterns_soxl.ipynb
+++ b/patterns_soxl.ipynb
@@ -2718,7 +2718,7 @@
     "                    entryIndices.append(i)\n",
     "                    holding_position = True\n",
     "            elif holding_position == True:\n",
-    "                if '''hidden for IP reasons''' and events[i - 1].ratio_60m < events[i - 2].ratio_60m:\n",
+    "                if '''hidden for IP reasons''':\n",
     "                    exitIndices.append(i)\n",
     "                    trade_counter += 1\n",
     "                    holding_position = False\n",
